--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <img src="img/dominic5.jfif" alt="Foto del niño" class="foto-nino" />
         <h1>Mi Primera Comunión</h1>
         <p class="nombre-nino"><strong>Dominic Díaz</strong></p>
-        <p>Acompáñame a recibir el Espíritu Santo</p>
+        <p>Acompáñame a recibir la Eucaristía</p>
         <h2 class="margin-top">¡Estás cordialmente invitado!</h2>
        
         <div class="grid-padrinos">
