--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
           </div>
           <div class="grid__texto flex">
             <h3 class="margin-top">-- Fiesta --</h3>
-            <p>📍 La fiesta sera en <strong>4034 Manzanita Dr </strong></p>
+            <p>📍 La fiesta sera en <strong>4032 Manzanita Dr </strong></p>
              <p>🕒 Horario: <strong>04:00 pm</strong></p>
           </div>
           <div class="grid__iframe">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d839.044170082292!2d-117.10859742673048!3d32.73449892635798!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d95473cefb7999%3A0xf96fec5f5d956012!2s4034%20Manzanita%20Dr%2C%20San%20Diego%2C%20CA%2092105%2C%20EE.%20UU.!5e0!3m2!1ses!2smx!4v1745173266574!5m2!1ses!2smx" 
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.5237207960681!2d-117.1080060219271!3d32.73415140161151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d95473cfef6d3d%3A0xd477d9b32c0fe34b!2s4032%20Manzanita%20Dr%2C%20San%20Diego%2C%20CA%2092105%2C%20EE.%20UU.!5e0!3m2!1ses!2smx!4v1745601287527!5m2!1ses!2smx" 
               width="100%" height="200" allowfullscreen loading="lazy"></iframe>
           </div>
         </div>
